# OpenCV

./: CMakeLists.txt  README.md  build.gradle
src/main/aidl/org/opencv/engine/: OpenCVEngineInterface.aidl
src/main/java/org/opencv/android/: AsyncServiceHelper.java  CameraBridgeViewBase.java  CameraGLRendererBase.java
src/main/java/org/opencv/imgproc/: Imgproc.java
